[package]
name = "timetravel_police"
version = "0.1.0"
authors = ["Victor \"multun\" Collod <victor.collod@epita.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus = "0.9"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
log = "0.4"
env_logger = "0.6"
structopt = "0.3"

[target.'cfg(windows)'.dependencies]
windows-service = "0.3"
winlog = { version = "0.2.5" }
log-panics = "*"
